独立cobar-manager，整合jetty server