@@ -35,24 +35,14 @@ fi
 #==============================================================================
 
 #set JAVA_OPTS
-JAVA_OPTS="-server -Xms1024m -Xmx1024m -Xmn256m -Xss256k"
-#performance Options
-JAVA_OPTS="$JAVA_OPTS -XX:+AggressiveOpts"
-JAVA_OPTS="$JAVA_OPTS -XX:+UseBiasedLocking"
-JAVA_OPTS="$JAVA_OPTS -XX:+UseFastAccessorMethods"
-JAVA_OPTS="$JAVA_OPTS -XX:+DisableExplicitGC"
-JAVA_OPTS="$JAVA_OPTS -XX:+UseParNewGC"
-JAVA_OPTS="$JAVA_OPTS -XX:+UseConcMarkSweepGC"
-JAVA_OPTS="$JAVA_OPTS -XX:+CMSParallelRemarkEnabled"
-JAVA_OPTS="$JAVA_OPTS -XX:+UseCMSCompactAtFullCollection"
-JAVA_OPTS="$JAVA_OPTS -XX:+UseCMSInitiatingOccupancyOnly"
-JAVA_OPTS="$JAVA_OPTS -XX:CMSInitiatingOccupancyFraction=75"
-#GC Log Options
-#JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCApplicationStoppedTime"
-#JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCTimeStamps"
-#JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCDetails"
-#debug Options
-#JAVA_OPTS="$JAVA_OPTS -Xdebug -Xrunjdwp:transport=dt_socket,address=8065,server=y,suspend=n"
+JAVA_OPTS="-Xss256k"
+#==============================================================================
+
+#stop Server
+$JAVA_HOME/bin/jps |grep CobarStartup|awk -F ' ' '{print $1}'|while read line
+do
+  eval "kill -9 $line"
+done
 #==============================================================================
 
 #set HOME
@@ -76,12 +66,12 @@ do
 done
 #==============================================================================
 
-#startup Server
+#shutdown Server
 RUN_CMD="\"$JAVA_HOME/bin/java\""
 RUN_CMD="$RUN_CMD -Dcobar.home=\"$COBAR_HOME\""
 RUN_CMD="$RUN_CMD -classpath \"$COBAR_CLASSPATH\""
 RUN_CMD="$RUN_CMD $JAVA_OPTS"
-RUN_CMD="$RUN_CMD com.alibaba.cobar.server.CobarStartup $@"
+RUN_CMD="$RUN_CMD com.alibaba.cobar.server.CobarShutdown $@"
 RUN_CMD="$RUN_CMD >> \"$COBAR_HOME/logs/console.log\" 2>&1 &"
 echo $RUN_CMD
 eval $RUN_CMD
